[build-system]
requires = ["setuptools>=42", "wheel", "Panda3D", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_vis"
version = "0.1.0"
description = "A Panda3D wrapper to visualise 2D grids."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Hal Kolb", email = "hal@kolb.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
# keywords = ["progress bar", "terminal", "progress", "python"]
requires-python = ">=3.6"

# [project.urls]
# homepage = "https://github.com/hal609/pretty-progress"
# repository = "https://github.com/hal609/pretty-progress"
# bug-tracker = "https://github.com/hal609/pretty-progress/issues"